# turtlebrowser

./: .clang-format  .gitignore  BUILD_CONAN_CACHE.md  BUILD_FREEBSD.md  BUILD_MACOS.md  BUILD_WINDOWS.md  CHROMIUM_UPDATES.md  CMakeLists.txt  NO_CONAN_BUILD.md  README.md  conanfile.py  process_licenses.sh
.github/workflows/: build.yml  build_debug.yml  conan_update.yml  freebsd.yml  snyk.yml  update_languages.yml  update_licenses  update_licenses.yml
LICENSES/: BSD-2-Clause.txt  MIT.txt
packaging/: CMakeLists.txt
src/: ApplicationState.cpp  ApplicationState.h  CMakeLists.txt  Context.cpp  Context.h  TurtleBrowser_de_AT.ts  TurtleBrowser_de_DE.ts  TurtleBrowser_ja.ts  main.cpp  qt.conf.in
src/licenses/: LicenseCategory.h  LicenseFilter.cpp  LicenseFilter.h  LicenseItem.cpp  LicenseItem.h  LicenseModel.cpp  LicenseModel.h  LicenseRole.h  LicenseState.cpp  LicenseState.h
src/resources/: resources.qrc
src/resources/licenses/linux/: linux_licenses.qrc
src/resources/licenses/macos/: macos_licenses.qrc
src/resources/licenses/windows/: windows_licenses.qrc
src/resources/qml/: AddressBar.qml  BrowserMenu.qml  FramelessTopLevelWindow.qml  LicenseNavigator.qml  LicensePage.qml  NavigationButton.qml  StyledMenu.qml  TabToolbar.qml  TopLevelWindow.qml  WebPage.qml  icons.js  loading.js  main.qml  theme.js  url.js
